--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"/>
-    <title>React App</title>
+    <title>React-Pizza</title>
   </head>
   <body>
     <div id="root"></div>
